--- a/index.html
+++ b/index.html
@@ -25,5 +25,7 @@
     <br>
     <a href="https://m.facebook.com/">FACEBOOK</a>
     <hr>
+    <a href="https://www.flipkart.com/?affid=partnershi1&affExtParam1=Mobile&affExtParam2=OFA">
+    flikart</a>
   </body>
 </html>
