--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       <div class="navbar">
         <div class="navlogo border" >
         <div class="logo">
-        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTkMTz9cggKz9Cw7hgF-dB1MxAZuyQxdf_tTQ&usqp=CAU"alt="logo"/>
+        <img src="logo.png"alt="logo"/>
         </div>
         </div>
         <div class="add border">
@@ -37,12 +37,27 @@
           <p class="singin">Return</p>
           <p class="acc">& Order</p>
           </div>
-          <div class="cart">
+          <div class="cart border">
             <i class="fa-solid fa-cart-shopping"></i>
             Cart
           </div>
       </div>
-      
+      <div class="menu">
+       <i class="fa-solid fa-bars border">  All</i>
+       <div class="allp">
+      <p class="border">Today's Deal</p>
+      <p class="border">Customer Service</p>
+      <p class="border">Registry</p>
+      <p class="border">Gift Cards</p>
+      <p class="border">Sell</p>
+      </div>
+      <div class="deals border">Shop deal in Electronic
+      </div>
+      </div>
+      <div class="hero2"></div>
+      </div>
+      <div class="hero">
+      </div
     </header>
   </body>
-</html>
+  </html>
