--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
       <div class="hero2"></div>
       </div>
       <div class="hero">
-      </div
+      </div>
     </header>
   </body>
 </html>
