--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html5>
+8<!DOCTYPE html5>
 <html>
   <head>
    <title>Amezone</title>
@@ -55,7 +55,6 @@
       </div>
       </div>
       <div class="hero2"></div>
-      </div>
       <div class="hero">
       </div>
     </header>
